crux-mir/test/symb_eval/num/checked_add.good
test checked_add/<DISAMB>::crux_test[0]: returned 44, [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- checked_add/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_add.rs:6:5: 6:12: error: in checked_add/<DISAMB>::crux_test[0]
[Crux]   attempt to compute `const 100_u8 + move _1`, which would overflow
[Crux]   Context:
[Crux]     test/symb_eval/num/checked_add.rs:6:5: 6:12: checked_add/<DISAMB>::crux_test[0]
[Crux]     internal: _start

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 1
[Crux]   Proved: 0
[Crux]   Disproved: 1
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
